--- a/docs/tex/1-wprowadzenie.tex
+++ b/docs/tex/1-wprowadzenie.tex
@@ -16,7 +16,7 @@ Praca ma charakter badawczo-eksperymentalny i obejmuje następujące zagadnienia
 \item sformułowanie i weryfikację hipotez badawczych dotyczących możliwości, ograniczeń oraz zagrożeń związanych z autonomicznym generowaniem konfiguracji IaC przez agenty LLM,
 \item przeprowadzenie eksperymentów obejmujących testy funkcjonalności, złożoności, jakości, bezpieczeństwa, deterministyczności oraz odporności na manipulację,
 \item wielowarstwową walidację jakości generowanych konfiguracji (automatyczna analiza statyczna, ocena przez model językowy, ocena ekspercka),
-\item TODO: zaprojektowanie i implementację prototypowego systemu typu PaaS demonstrującego praktyczne zastosowanie agentów LLM do automatycznego wdrażania aplikacji kontenerowych.
+% \item TODO: zaprojektowanie i implementację prototypowego systemu typu PaaS demonstrującego praktyczne zastosowanie agentów LLM do automatycznego wdrażania aplikacji kontenerowych.
 \end{itemize}
 
 \subsection{Motywacja}
@@ -34,6 +34,6 @@ Praca składa się z następujących rozdziałów:
     \item \textbf{Rozdział 3 – Przegląd technologii i narzędzi}: opis wybranych modeli językowych, technologii infrastrukturalnych oraz architektury systemu agentowego,
     \item \textbf{Rozdział 4 – Projekt eksperymentów}: przedstawienie pięciu hipotez badawczych, metodyki ich weryfikacji, zestawów danych testowych, architektury systemu testowego oraz kryteriów oceny dla każdej hipotezy,
     \item \textbf{Rozdział 5 – Wyniki eksperymentów}: szczegółowa prezentacja wyników dla każdej z pięciu hipotez, analiza danych, wielowarstwowa walidacja jakości (automatyczna, LLM-as-a-Judge, ekspercka) oraz synteza wyników z wnioskami i implikacjami praktycznymi,
-    \item \textbf{[TODO: Rozdział 6 – Praktyczne zastosowanie – system PaaS]}: demonstracja praktycznego wykorzystania wypracowanych rozwiązań w postaci prototypowego systemu typu Platform as a Service automatyzującego wdrażanie aplikacji kontenerowych,
+    % \item \textbf{[TODO: Rozdział 6 – Praktyczne zastosowanie – system PaaS]}: demonstracja praktycznego wykorzystania wypracowanych rozwiązań w postaci prototypowego systemu typu Platform as a Service automatyzującego wdrażanie aplikacji kontenerowych,
     \item \textbf{[TODO: Rozdział 7 – Wnioski i dalsze kierunki rozwoju]}: podsumowanie wyników badań, weryfikacja hipotez, ocena przydatności agentów LLM w kontekście DevOps oraz wskazanie możliwych obszarów dalszych badań.
 \end{itemize}
